IdeaProjects/GP_prj/src/generated/GPParser.java
// Generated from C:/Users/Pruebas/IdeaProjects/GP_prj\GPParser.g4 by ANTLR 4.6
package generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT=1, STRING=2, PyCOMA=3, COMA=4, ASIGN=5, PIZQ=6, PDER=7, SUMA=8, MUL=9, 
		NUM=10, ID=11, STR=12, LINE_COMMENT=13, SPECIAL_COMMENT=14, WS=15;
	public static final int
		RULE_program = 0, RULE_declarations = 1, RULE_declaration = 2, RULE_statements = 3, 
		RULE_statement = 4, RULE_expression = 5, RULE_term = 6, RULE_factor = 7, 
		RULE_idlist = 8;
	public static final String[] ruleNames = {
		"program", "declarations", "declaration", "statements", "statement", "expression", 
		"term", "factor", "idlist"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'INT'", "'STRING'", "';'", "','", "'='", "'('", "')'", "'+'", "'*'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "INT", "STRING", "PyCOMA", "COMA", "ASIGN", "PIZQ", "PDER", "SUMA", 
		"MUL", "NUM", "ID", "STR", "LINE_COMMENT", "SPECIAL_COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GPParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CondeclsContext extends ProgramContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GPParser.EOF, 0); }
		public CondeclsContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GPParserVisitor ) return ((GPParserVisitor<? extends T>)visitor).visitCondecls(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SindeclsContext extends ProgramContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GPParser.EOF, 0); }
		public SindeclsContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GPParserVisitor ) return ((GPParserVisitor<? extends T>)visitor).visitSindecls(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			setState(25);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case STRING:
				_localctx = new CondeclsContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(18);
				declarations();
				setState(19);
				statements();
				setState(20);
				match(EOF);
				}
				break;
			case EOF:
			case PyCOMA:
			case PIZQ:
			case NUM:
			case ID:
			case STR:
				_localctx = new SindeclsContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(22);
				statements();
				setState(23);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
	 
		public DeclarationsContext() { }
		public void copyFrom(DeclarationsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclsContext extends DeclarationsContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<TerminalNode> PyCOMA() { return getTokens(GPParser.PyCOMA); }
		public TerminalNode PyCOMA(int i) {
			return getToken(GPParser.PyCOMA, i);
		}
		public DeclsContext(DeclarationsContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GPParserVisitor ) return ((GPParserVisitor<? extends T>)visitor).visitDecls(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		int _la;
		try {
			_localctx = new DeclsContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			declaration();
			setState(28);
			match(PyCOMA);
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INT || _la==STRING) {
				{
				{
				setState(29);
				declaration();
				setState(30);
				match(PyCOMA);
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IntdeclContext extends DeclarationContext {
		public TerminalNode INT() { return getToken(GPParser.INT, 0); }
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public IntdeclContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GPParserVisitor ) return ((GPParserVisitor<? extends T>)visitor).visitIntdecl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StrdeclContext extends DeclarationContext {
		public TerminalNode STRING() { return getToken(GPParser.STRING, 0); }
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public StrdeclContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GPParserVisitor ) return ((GPParserVisitor<? extends T>)visitor).visitStrdecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		try {
			setState(41);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				_localctx = new IntdeclContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				match(INT);
				setState(38);
				idlist();
				}
				break;
			case STRING:
				_localctx = new StrdeclContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				match(STRING);
				setState(40);
				idlist();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
	 
		public StatementsContext() { }
		public void copyFrom(StatementsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StatsContext extends StatementsContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> PyCOMA() { return getTokens(GPParser.PyCOMA); }
		public TerminalNode PyCOMA(int i) {
			return getToken(GPParser.PyCOMA, i);
		}
		public StatsContext(StatementsContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GPParserVisitor ) return ((GPParserVisitor<? extends T>)visitor).visitStats(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statements);
		int _la;
		try {
			_localctx = new StatsContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			statement();
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PyCOMA) {
				{
				{
				setState(44);
				match(PyCOMA);
				setState(45);
				statement();
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EpsstatContext extends StatementContext {
		public EpsstatContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GPParserVisitor ) return ((GPParserVisitor<? extends T>)visitor).visitEpsstat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExprstatContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExprstatContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GPParserVisitor ) return ((GPParserVisitor<? extends T>)visitor).visitExprstat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AsignstatContext extends StatementContext {
		public TerminalNode ID() { return getToken(GPParser.ID, 0); }
		public TerminalNode ASIGN() { return getToken(GPParser.ASIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AsignstatContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GPParserVisitor ) return ((GPParserVisitor<? extends T>)visitor).visitAsignstat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		try {
			setState(56);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new AsignstatContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				match(ID);
				setState(52);
				match(ASIGN);
				setState(53);
				expression();
				}
				break;
			case 2:
				_localctx = new ExprstatContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				expression();
				}
				break;
			case 3:
				_localctx = new EpsstatContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExprContext extends ExpressionContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TerminalNode> SUMA() { return getTokens(GPParser.SUMA); }
		public TerminalNode SUMA(int i) {
			return getToken(GPParser.SUMA, i);
		}
		public ExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GPParserVisitor ) return ((GPParserVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expression);
		int _la;
		try {
			_localctx = new ExprContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			term();
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SUMA) {
				{
				{
				setState(59);
				match(SUMA);
				setState(60);
				term();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
	 
		public TermContext() { }
		public void copyFrom(TermContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Term1Context extends TermContext {
		public List<FactorContext> factor() {
			return getRuleContexts(FactorContext.class);
		}
		public FactorContext factor(int i) {
			return getRuleContext(FactorContext.class,i);
		}
		public List<TerminalNode> MUL() { return getTokens(GPParser.MUL); }
		public TerminalNode MUL(int i) {
			return getToken(GPParser.MUL, i);
		}
		public Term1Context(TermContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GPParserVisitor ) return ((GPParserVisitor<? extends T>)visitor).visitTerm1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_term);
		int _la;
		try {
			_localctx = new Term1Context(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			factor();
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MUL) {
				{
				{
				setState(67);
				match(MUL);
				setState(68);
				factor();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactorContext extends ParserRuleContext {
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
	 
		public FactorContext() { }
		public void copyFrom(FactorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NumfactContext extends FactorContext {
		public TerminalNode NUM() { return getToken(GPParser.NUM, 0); }
		public NumfactContext(FactorContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GPParserVisitor ) return ((GPParserVisitor<? extends T>)visitor).visitNumfact(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GroupfactContext extends FactorContext {
		public TerminalNode PIZQ() { return getToken(GPParser.PIZQ, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PDER() { return getToken(GPParser.PDER, 0); }
		public GroupfactContext(FactorContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GPParserVisitor ) return ((GPParserVisitor<? extends T>)visitor).visitGroupfact(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StrfactContext extends FactorContext {
		public TerminalNode STR() { return getToken(GPParser.STR, 0); }
		public StrfactContext(FactorContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GPParserVisitor ) return ((GPParserVisitor<? extends T>)visitor).visitStrfact(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IdfactContext extends FactorContext {
		public TerminalNode ID() { return getToken(GPParser.ID, 0); }
		public IdfactContext(FactorContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GPParserVisitor ) return ((GPParserVisitor<? extends T>)visitor).visitIdfact(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FactorContext factor() throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_factor);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PIZQ:
				_localctx = new GroupfactContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				match(PIZQ);
				setState(75);
				expression();
				setState(76);
				match(PDER);
				}
				break;
			case ID:
				_localctx = new IdfactContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				match(ID);
				}
				break;
			case NUM:
				_localctx = new NumfactContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				match(NUM);
				}
				break;
			case STR:
				_localctx = new StrfactContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				match(STR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdlistContext extends ParserRuleContext {
		public IdlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idlist; }
	 
		public IdlistContext() { }
		public void copyFrom(IdlistContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Idlist1Context extends IdlistContext {
		public List<TerminalNode> ID() { return getTokens(GPParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GPParser.ID, i);
		}
		public List<TerminalNode> COMA() { return getTokens(GPParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(GPParser.COMA, i);
		}
		public Idlist1Context(IdlistContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GPParserVisitor ) return ((GPParserVisitor<? extends T>)visitor).visitIdlist1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdlistContext idlist() throws RecognitionException {
		IdlistContext _localctx = new IdlistContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_idlist);
		int _la;
		try {
			_localctx = new Idlist1Context(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(ID);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(84);
				match(COMA);
				setState(85);
				match(ID);
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}